--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,17 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Simple Chat</title>
-    </head>
-    
-    <body>
-        <p>to send a message use /USERNAME/MESSAGE</p>
-    </body>
+
+<head>
+    <title>Simple Chat</title>
+</head>
+
+<body>
+    <!-- <p>to send a message use /USERNAME/MESSAGE</p> -->
+    <form method="POST">
+        <label for="username">Username:</label>
+        <input type="text" name="username" id="username">
+        <button>Go To Chat!</button>
+    </form>
+</body>
+
 </html>
