--- a/templates/index.html
+++ b/templates/index.html
@@ -2,11 +2,10 @@
 <html>
 
 <head>
-    <title>Simple Chat</title>
+    <title>Simple Chat App</title>
 </head>
 
 <body>
-    <!-- <p>to send a message use /USERNAME/MESSAGE</p> -->
     <form method="POST">
         <label for="username">Username:</label>
         <input type="text" name="username" id="username">
