--- a/templates/chat.html
+++ b/templates/chat.html
@@ -15,7 +15,13 @@
     {% for msg in msgs %}
     <p>({{ msg.timestamp }}) {{ msg.username }}: {{ msg.message }}</p>
     {% endfor %}
-
+    
+    
+    <script>
+        var timer = setTimeout(function() {
+            location.reload()
+        }, 10000)
+    </script>
 
 </body>
 
